# sweet

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.agents/commands/: bump-version.md  check.md  pr.md  review-pr.md
.agents/skills/debug-sandbox/: SKILL.md
.agents/skills/debug-sandbox/references/: bubblewrap.md  known-gaps.md  seatbelt-sbpl.md
.agents/skills/debug-sandbox/scripts/: repro.sh  show-tool-roots.sh
.github/workflows/: ci.yml
crates/sweet-agent/: Cargo.toml
crates/sweet-agent/src/: agent.rs  commands.rs  dynamic_prompt.rs  extension.rs  handoff.rs  hooks.rs  lib.rs  memory.rs  runloop.rs  subagent.rs  test_util.rs
crates/sweet-agent/tests/: handoff.rs  parallel.rs  permission.rs  subagent.rs
crates/sweet-computer-use-core/: Cargo.toml
crates/sweet-computer-use-core/src/: action.rs  lib.rs  observation.rs  provider.rs  render.rs  tool.rs
crates/sweet-computer-use-macos/: Cargo.toml  build.rs
crates/sweet-computer-use-macos/examples/: probe.rs
crates/sweet-computer-use-macos/src/: lib.rs  provider.rs
crates/sweet-computer-use-macos/src/macos/: accessibility.rs  ffi.rs  input.rs  mod.rs  permissions.rs  screenshot.rs  windows.rs
crates/sweet-core/: Cargo.toml
crates/sweet-core/src/: embedder.rs  error.rs  lib.rs  memory.rs  message.rs  model.rs  permission.rs  sandbox.rs  session.rs  stream.rs  tool.rs  version.rs
crates/sweet-llm/: Cargo.toml
crates/sweet-llm/src/: cerebras.rs  error.rs  lib.rs  reasoning.rs  sampling.rs  sse.rs  structured_output.rs  tool_choice.rs  util.rs
crates/sweet-llm/src/anthropic/: mod.rs  thinking.rs  wire.rs
crates/sweet-llm/src/gemini/: embeddings.rs  mod.rs  wire.rs
crates/sweet-llm/src/openai/: embeddings.rs  mod.rs  reasoning.rs  thinking.rs  wire.rs
crates/sweet-llm/tests/: anthropic.rs  cerebras.rs  gemini.rs  gemini_embeddings.rs  openai.rs  openai_embeddings.rs  openai_stream.rs  openai_tools.rs
crates/sweet-mcp/: Cargo.toml
crates/sweet-mcp-mock-server/: Cargo.toml
crates/sweet-mcp-mock-server/src/: main.rs
crates/sweet-mcp/src/: config.rs  error.rs  lib.rs  provider.rs
crates/sweet-mcp/tests/: transports.rs
crates/sweet-memory/: Cargo.toml
crates/sweet-memory/src/: lib.rs  sqlite.rs  sqlite_shared.rs  sqlite_vec.rs  tools.rs
crates/sweet-memory/tests/: sqlite_store.rs  sqlite_vec_store.rs
crates/sweet-sandbox/: Cargo.toml
crates/sweet-sandbox/src/: lib.rs  os_sandbox.rs  restricted_fs.rs  tool_paths.rs
crates/sweet-sandbox/src/bubblewrap/: mod.rs
crates/sweet-sandbox/src/seatbelt/: mod.rs
crates/sweet-sandbox/tests/: sandbox_behaviour.rs
crates/sweet-session/: Cargo.toml
crates/sweet-session/src/: lib.rs  sqlite.rs
crates/sweet-session/tests/: session.rs
crates/sweet-tool-derive/: Cargo.toml
crates/sweet-tool-derive/src/: lib.rs
crates/sweet-tools/: Cargo.toml
crates/sweet-tools/src/: calculator.rs  http_fetch.rs  lib.rs  time.rs
crates/sweet-tools/src/web_search/: brave.rs  mod.rs  tavily.rs
crates/sweet-tools/tests/: web_search_brave.rs  web_search_tavily.rs
scripts/: check.sh  clean.sh  lint.sh
