[package]
name = "sweet-computer-use-macos"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "macOS computer-use backend (accessibility tree, Quartz input events, screen capture) implementing the sweet-computer-use-core provider trait."

[dependencies]
sweet-computer-use-core = { path = "../sweet-computer-use-core" }
sweet-core = { path = "../sweet-core" }
async-trait = { workspace = true }
# `tokio::time::sleep` drives the provider's async `act` for `Wait` (so a pause
# yields instead of blocking the executor). Only the `time` feature is needed;
# the runtime itself is driven by the host binary.
tokio = { workspace = true, features = ["time"] }

# Screen capture downscaling (resizing the pixel capture to the display's point
# size) is macOS-only; other targets build the Unsupported stub and need none of
# this.
[target.'cfg(target_os = "macos")'.dependencies]
image = { workspace = true }

[dev-dependencies]
# For the `probe` example, which drives the backend directly.
tokio = { workspace = true, features = ["macros", "rt"] }
