[package]
name = "sweet-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "MCP tool provider backed by the official rmcp SDK."

[dependencies]
sweet-core = { path = "../sweet-core" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process"] }
rmcp = { workspace = true, features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
    "reqwest",
] }
reqwest = { workspace = true }
http = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "io-util"] }
