[package]
name = "sweet-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Local OS-level sandbox implementations for the sweet agent framework."

[features]
default = ["platform-sandbox"]
platform-sandbox = []

[dependencies]
sweet-core = { path = "../sweet-core" }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["process"] }
serde = { workspace = true }
tracing = { workspace = true }
dunce = { workspace = true }
which = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
