[package]
name = "sweet-session"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Session implementations for the sweet AI agent framework."

[features]
default = []
sqlite = ["dep:rusqlite"]

[dependencies]
sweet-core = { path = "../sweet-core" }
serde_json = { workspace = true }
rusqlite = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tempfile = { workspace = true }
