[package]
name = "sweet-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Universal built-in tools for the sweet AI agent framework."

[features]
default = ["http-fetch", "time"]
calculator = []
http-fetch = ["dep:reqwest"]
time = ["dep:chrono"]
web-search = ["dep:reqwest"]
brave = ["web-search"]
tavily = ["web-search"]

[dependencies]
sweet-core = { path = "../sweet-core", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = { workspace = true }
serial_test = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
